[workspace]
members = [
    "01_vecs",
    "02_strings",
    "03_ownership",
    "04_shapes",
    "05_patterns",
    "06_types",
    "07_traits",
    "08_generics",
    "09_results",
    "10_hashmaps",
    "11_iterators",
    "12_files",
    "13_todolist",
    "14_calculator",
    "15_enums_deep",
    "16_modules",
    "17_testing",
    "18_lifetimes",
    "19_smartptrs",
    "20_closures",
    "21_macros",
    "22_threads",
    "23_lru_cache",
    "24_http_server",
    "25_kv_store",
    "26_markdown",
    "27_advanced_traits",
    "28_advanced_types",
    "29_trait_objects",
    "30_unsafe",
    "31_async",
    "32_serde",
    "33_error_handling",
    "34_async_project",
    "35_ring_buffer",
    "36_bitwise",
    "37_binary_protocol",
    "38_arena_allocator",
    "39_mini_shell",
    "40_concurrency_primitives",
]
resolver = "2"
