[workspace]
members = [
    "01_ownership",
    "02_structs",
    "03_patterns",
    "04_modules",
    "05_vecs",
    "06_strings",
    "07_hashmaps",
    "08_results",
    "09_generics",
    "10_traits",
    "11_lifetimes",
    "13_files",
    "14_closures",
    "15_iterators",
    "16_todolist",
    "17_calculator",
    "18_smartptrs",
    "19_threads",
    "20_async",
    "21_trait_objects",
    "22_enums_deep",
    "23_advanced_traits",
    "24_advanced_types",
    "25_unsafe",
    "26_macros",
    "27_error_handling",
    "28_serde",
    "29_types",
    "30_kv_store",
    "31_http_server",
    "32_lru_cache",
    "33_markdown",
    "34_async_project",
    "35_ring_buffer",
    "36_bitwise",
    "37_binary_protocol",
    "38_arena_allocator",
    "39_mini_shell",
    "40_concurrency_primitives",
]
resolver = "2"
